--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,9 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <script src="https://apis.google.com/js/platform.js"></script>
+  <meta name="google-signin-client_id" content="180374672702-vad12pe1q4og9dr4mjra0hrsj57ol1im.apps.googleusercontent.com">
+
 </head>
 <body>
   <app-root></app-root>
